--- a/DontCrysis/static/DontCrysis/base.css
+++ b/DontCrysis/static/DontCrysis/base.css
@@ -133,3 +133,14 @@ td,th{
     padding: 5px;
     marging-left: 10px;
 }
+
+.weather-info{
+    font-size: 12px;
+    position: absolute;
+    bottom: 500px;
+    left: 0px;
+    width: 20%;
+    height:100%;
+    color: white;
+    background-color: rgba(0,0,0,0.5) ;
+}
